# term_billy_engine

./: .buildconfig  Cargo.toml  README.md  meson.build
.github/workflows/: rust.yml
billy_engine/: Cargo.toml
billy_engine/src/: audio.rs  engine.rs  event.rs  lib.rs  maths.rs  ui.rs
billy_engine/src/eventkeyboard/: mod.rs
billy_engine/tests/: test.rs  test_engine.rs  test_engine_exclude_gitaction.rs
main/: Cargo.toml  meson.build
main/src/: demo_engine.rs  main.rs
src/: libs.rs  main.rs
src/libs/: libs_billy_engine.rs  libs_math.rs
